--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
