--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_USERNAME=saideepthip21
 DATABASE_PASSWORD=medicare_react_project
-MONGODB_URI=mongodb+srv://saideepthip21:medicare_react_project@cluster0.ywkixmo.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://saideepthip21:medicare_react_project@cluster0.ywkixmo.mongodb.net/Medicare
