--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^8.1.1",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.13.0",
     "swr": "^2.2.0",
     "validator": "^13.9.0"
