--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "framer-motion": "^10.6.8",
     "mongodb": "^6.3.0",
     "mongoose": "^7.3.3",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "swr": "^2.2.0",
     "validator": "^13.9.0"
   },
