--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@mui/x-charts": "^6.18.2",
+    "@mui/x-data-grid": "^6.18.2",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
