--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
@@ -23,7 +25,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
-    "framer-motion": "^10.6.8",
+    "framer-motion": "^10.16.12",
     "mongodb": "^6.3.0",
     "mongoose": "^7.3.3",
     "react": "^18.2.0",
