--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "both": "concurrently \"npx json-server --watch ./data/db.json --port 3001\" \"npm run dev\""
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -26,6 +27,7 @@
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.12",
+    "json-server": "^0.17.4",
     "mongodb": "^6.3.0",
     "mongoose": "^7.3.3",
     "react": "^18.2.0",
