--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,6 @@
     "both": "concurrently \"npx json-server --watch ./data/db.json --port 3001\" \"npm run dev\""
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.32.6",
-    "@tanstack/react-query-devtools": "^4.32.6",
-    "dayjs": "^1.11.9",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -22,11 +19,14 @@
     "@mui/x-charts": "^6.18.2",
     "@mui/x-data-grid": "^6.18.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.12",
@@ -39,6 +39,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.13.0",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "swr": "^2.2.0",
     "validator": "^13.9.0"
@@ -57,8 +58,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.18",
     "concurrently": "^8.2.0",
+    "daisyui": "^4.4.18",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
