--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "swr": "^2.2.0",
+    "universal-cookie": "^7.0.2",
     "validator": "^13.9.0"
   },
   "devDependencies": {
