--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-HOST_NAME = smtp.gmail.com
-USER_NAME = vivekchaitanya1324@gmail.com
-APP_PASS = pmis gcrh fktz zaie
+DATABASE_USERNAME=saideepthip21
+DATABASE_PASSWORD=medicare_react_project
+MONGODB_URI=mongodb+srv://saideepthip21:medicare_react_project@cluster0.ywkixmo.mongodb.net/Medicare
+PORT=3000
