appointment and cloudinary images

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,7 @@ DATABASE_USERNAME=saideepthip21
 DATABASE_PASSWORD=medicare_react_project
 MONGODB_URI=mongodb+srv://saideepthip21:medicare_react_project@cluster0.ywkixmo.mongodb.net/Medicare
 PORT=3000
+
+CLOUDINARY_API_KEY=989869329516883
+CLOUDINARY_API_SECRET=Sn-YNrRgGflJKfqCeY0kLAI83-4
+CLOUDINARY_CLOUD_NAME=dvtxfpbk6
