--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,17 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@mui/x-charts": "^6.18.2",
     "@mui/x-data-grid": "^6.18.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@remixicon/react": "^4.1.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
+    "@tremor/react": "^3.14.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "chart.js": "^4.4.1",
@@ -30,7 +34,7 @@
     "dayjs": "^1.11.9",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
-    "framer-motion": "^10.16.12",
+    "framer-motion": "^10.18.0",
     "json-server": "^0.17.4",
     "mongodb": "^6.3.0",
     "mongoose": "^7.3.3",
@@ -49,6 +53,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
